.provarCaches/00D5f000005vwGkEAI/objects/rstkf__aragingd__c.object
<CustomObject>
    <description>aragingd__c : Detail table for AR Aging data for drill down enabled</description>
    <fields>
        <fullName>rstkf__Age_Due__c</fullName>
        <description>Age of the invoice based on the invoice due date. Formula is Invoice Due Date - As of Date</description>
        <formula>rstkf__aragingd_duedate__c -  rstkf__aragingd_xagingdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the invoice based on the invoice due date. Formula is Invoice Due Date - As of Date</inlineHelpText>
        <label>Age - Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__Age_Transaction__c</fullName>
        <description>Age of the invoice based on the invoice transaction date. Formula is Invoice transaction Date - As of Date</description>
        <formula>rstkf__aragingd_trandate__c - rstkf__aragingd_xagingdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the invoice based on the invoice transaction date. Formula is Invoice Transaction Date - As of Date</inlineHelpText>
        <label>Age - Transaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__Currency_Home__c</fullName>
        <formula>TEXT( rstkf__aragingd_arinvdue__r.rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_homecurr__r.rstk__sycurr_currency__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Home currency from the Receivable Transaction</inlineHelpText>
        <label>Currency Home</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__Currency_Transaction__c</fullName>
        <formula>TEXT( rstkf__aragingd_arinvdue__r.rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_maintcurr__r.rstk__sycurr_currency__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Transaction currency from the Receivable Transaction</inlineHelpText>
        <label>Currency Transaction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__Rate_of_Exchange__c</fullName>
        <formula>rstkf__aragingd_arinvdue__r.rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_exchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Rate of Exchange from the Receivable Transaction</inlineHelpText>
        <label>Rate of Exchange</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_aragingh__c</fullName>
        <label>Report Header</label>
        <referenceTo>rstkf__aragingh__c</referenceTo>
        <relationshipLabel>AR Aging Drill Down Details</relationshipLabel>
        <relationshipName>aragingds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_arinvdue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AR Item</label>
        <referenceTo>rstkf__arinvdue__c</referenceTo>
        <relationshipLabel>AR Aging Drill Down Details</relationshipLabel>
        <relationshipName>aragingds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_currencytext__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_discntduedate__c</fullName>
        <label>Discount Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_docno__c</fullName>
        <label>Document #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_duedate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_lineno__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_linetext__c</fullName>
        <label>Z_OBSOLETE_linetex</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_linetype__c</fullName>
        <label>Z_OBSOLETE_linetype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Total</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Drill Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_numcol1__c</fullName>
        <label>Z_OBSOLETE_numcol1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_numcol2__c</fullName>
        <label>Z_OBSOLETE_numcol2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_numcol3__c</fullName>
        <label>Z_OBSOLETE_numcol3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_processlog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>aragingd_processlog__c</description>
        <label>Processlog</label>
        <referenceTo>rstkf__processlogf__c</referenceTo>
        <relationshipLabel>AR Aging Drill Down Details</relationshipLabel>
        <relationshipName>processlogs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_totaltext__c</fullName>
        <label>Z_OBSOLETE_totaltext</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_trandate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_tranid__c</fullName>
        <label>Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_trantype__c</fullName>
        <label>Transaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_xagingdate__c</fullName>
        <formula>rstkf__aragingd_aragingh__r.rstkf__aragingh_agingdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_xcustpo__c</fullName>
        <description>aragingd_xcustpo__c</description>
        <label>Customer PO Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_xopenamthome__c</fullName>
        <description>aragingd_xopenamthome__c</description>
        <label>Open Amount - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_xopenamtmaint__c</fullName>
        <description>aragingd_xopenamtmaint__c</description>
        <label>Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_xsocust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>aragingd_xsocust__c</description>
        <label>Customer Master</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>AR Aging Drill Down Details (Customer Master)</relationshipLabel>
        <relationshipName>aragingds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_xsocustcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>aragingd_xsocustcmpno__c</description>
        <label>Customer Company</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipLabel>AR Aging Drill Down Details (Customer Company)</relationshipLabel>
        <relationshipName>aragingds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_xsohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>aragingd_xsohdr__c</description>
        <label>Sales Order</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>AR Aging Drill Down Details (Sales Order)</relationshipLabel>
        <relationshipName>aragingds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_xsoinv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>aragingd_xsoinv__c</description>
        <label>Sales Invoice</label>
        <referenceTo>rstk__soinv__c</referenceTo>
        <relationshipLabel>AR Aging Drill Down Details (Sales Invoice)</relationshipLabel>
        <relationshipName>aragingds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__aragingd_aragingh__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; rstkf__aragingd_lineno__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__aragingd_aragingh__r.Name &amp; &apos;-&apos; &amp; rstkf__aragingd_lineno__c</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AR Aging Drill Down Detail</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR Aging Drill Down Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>